Split StarRocksJdbcClient and give column types a single source of truth
The client had grown to 728 lines and 32 methods covering driver registration,
URL parsing, connection lifecycle, leader rotation and retry, column metadata,
type mapping, row extraction and every query. Its own test said so: reading the
URL fan-out required reflection to reach a private static method, which is what
a boundary in the wrong place looks like. It is now 240 lines of queries over
FeConnection (URLs, transport, connection reuse, leader rotation, retry),
ColumnMetadataReader (the authoritative column list, plus the DATA_TYPE mapping)
and RowExtractor. parseUrls and toJdbcType are package-visible and called
directly.

The reason for RowExtractor is not tidiness. extractValue switched on
ResultSetMetaData.getColumnType(), re-asking the driver what each column was,
while ChangeRecordMapper built the Connect schema from the list resolved by
fetchColumns -- two sources of truth for one read path, and on Arrow Flight the
driver's own account is known to be wrong (it repeats the schema, calls every
column NOT NULL, and zeroes precision and scale; that is why fetchColumns stopped
believing it). Any disagreement lands as a DataException at serialization time,
far from the cause. streamSnapshot/streamChanges now take List<ColumnMeta> rather
than column names, so the schema and the read cannot drift apart.

BINARY and VARBINARY were falling through to the STRING default on both sides at
once, so nothing ever threw: the bytes went through getString(), were decoded with
the connection charset, and anything that was not valid text came back as U+FFFD
with no way to recover it. Both sides now use BYTES and getBytes(). Because the
fix has to be made in both places, reverting either one alone fails the new test
immediately.

Removing source.netchanges is a decision, not a cleanup. The flag worked -- it set
enable_cdc_net_change, which folds each key's changes in a window into one net
DELETE/INSERT pa